tdf#92997 obtain a date/time edit format according to field value

Bloody workaround hack for the fact that Chart does not handle
category/x-axis times internally and is not able to pass its own axis
numberformat to its own databrowser editor.

(cherry picked from commit 711b34d590e659ed754f7c57b3b5eb12acfbbd78)

Conflicts:
	chart2/source/controller/dialogs/DataBrowser.cxx

Change-Id: I016695ad0104366c0bb636b449a2014ade31aca3
Reviewed-on: https://gerrit.libreoffice.org/17630
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>